--- a/config.env
+++ b/config.env
@@ -1,46 +1,64 @@
-#═══════[ CORE CONFIG ]═══════✧#
-SESSION_ID=
-PREFIX="."
-PUBLIC_MODE='yes'
+const fs = require('fs');
+if (fs.existsSync('config.env')) require('dotenv').config({ path: './config.env' });
 
-#═══════[ OWNER DETAILS ]═══════✧#
-OWNER_NAME="᚛Ibrahim adams᚜"
-OWNER_NUMBER="254xxxxxxxx"
-
-#═══════[ BOT PROFILE ]═══════✧#
-BOT_NAME="BWM-XMD"
-BOT_IMAGE=""
-STARTING_BOT_MESSAGE='yes'
-
-#═══════[ PRESENCE & AUTOMATION ]═══════✧#
-PRESENCE=
-AUTO_READ="no"
-AUTO_READ_STATUS="yes"
-AUTO_DOWNLOAD_STATUS="no"
-
-#═══════[ CHAT FEATURES ]═══════✧#
-CHATBOT="no"
-AUDIO_CHATBOT="no"
-
-#═══════[ GROUP SECURITY ]═══════✧#
-GROUPANTILINK_REMOVE="yes"
-GROUPANTILINK_DELETE_ONLY="no"
-ANTIDELETE_SENT_INBOX="yes"
-ANTIDELETE_RECOVER_CONVENTION="no"
-WARN_COUNT=""
-
-#═══════[ MESSAGE HANDLING ]═══════✧#
-STATUS_REACT_EMOJIS="🚀,🌎"
-WELCOME_MESSAGE="no"
-GOODBYE_MESSAGE="no"
-
-#═══════[ HEROKU CONFIG ]═══════✧#
-HEROKU_APP_NAME=
-HEROKU_API_KEY=
-
-#═══════[ AUTO REACTIONS ]═══════✧#
-AUTO_REACT="no"
-AUTO_REACT_STATUS="yes"
-AUTO_REJECT_CALL="no"
-AUTO_BIO="yes"
-#════════════════════════════✧#
+function convertToBool(text, fault = 'true') {
+    return text === fault ? true : false;
+}
+module.exports = {
+SESSION_ID: process.env.SESSION_ID || "",
+// add your Session Id 
+PREFIX: process.env.PREFIX || ".",
+// add your prifix for bot
+BOT_NAME: process.env.BOT_NAME || "✦ B.M.B-XMD ✦ XMD ✦",
+// add bot namw here for menu
+CUSTOM_REACT: process.env.CUSTOM_REACT || "false",
+// make this true for custum emoji react    
+CUSTOM_REACT_EMOJIS: process.env.CUSTOM_REACT_EMOJIS || "💝,💖,💗,❤️‍🔥,❤️‍🩹,❤️,🩷,🧡,💛,💚,💙,🩵,💜,🤎,🖤,🤍",
+// chose custom react emojis by yourself 
+DELETE_LINKS: process.env.DELETE_LINKS || "false",
+// automatic delete links witho remove member 
+OWNER_NUMBER: process.env.OWNER_NUMBER || "25566862457",
+// add your bot owner number
+OWNER_NAME: process.env.OWNER_NAME || "✦ B.M.B-XMD ✦ XMD ✦",
+// add bot owner name
+DESCRIPTION: process.env.DESCRIPTION || "*© ✦ B.M.B-XMD ✦ XMD ✦*",
+// add bot owner name    
+ALIVE_IMG: process.env.ALIVE_IMG || "https://files.catbox.moe/p9hyal.jpg",
+// add img for alive msg
+LIVE_MSG: process.env.LIVE_MSG || ">B.M.B IS ACTIVE AND ALIVE\n\n\nKEEP USING B.M.B-XMD FROM B.M.B TECH INC⚡",
+// add alive msg here 
+READ_MESSAGE: process.env.READ_MESSAGE || "false",
+// Turn true or false for automatic read msgs
+AUTO_REACT: process.env.AUTO_REACT || "false",
+// make this true or false for auto react on all msgs
+ANTI_BAD: process.env.ANTI_BAD || "false",
+// false or true for anti bad words
+AUTO_STATUS_SEEN: process.env.AUTO_STATUS_SEEN || "true",
+// make true or false status auto seen
+AUTO_STATUS_REPLY: process.env.AUTO_STATUS_REPLY || "true",
+// make true if you want auto reply on status 
+AUTO_STATUS__MSG: process.env.AUTO_STATUS__MSG || "*🎉👀 Seen by 𝙱.𝙼.𝙱-𝚇𝙼𝙳 🚀🔥*",
+// set the auto reply massage on status reply    
+MODE: process.env.MODE || "public",
+// make bot public-private-inbox-group 
+ANTI_LINK: process.env.ANTI_LINK || "true",
+// make anti link true,false for groups 
+AUTO_VOICE: process.env.AUTO_VOICE || "false",
+// make true for send automatic voices
+AUTO_STICKER: process.env.AUTO_STICKER || "false",
+// make true for automatic stickers 
+AUTO_REPLY: process.env.AUTO_REPLY || "false",
+// make true or false automatic text reply 
+HEART_REACT: process.env.HEART_REACT || "false",
+// make this true or false for heart reactions only 
+OWNER_REACT: process.env.OWNER_REACT || "false",
+// make it true or fasle for only react on owner msg only 
+ALWAYS_ONLINE: process.env.ALWAYS_ONLINE || "true",
+// maks true for always online 
+PUBLIC_MODE: process.env.PUBLIC_MODE || "true",
+// make false if want private mod
+AUTO_TYPING: process.env.AUTO_TYPING || "true",
+// true for automatic show typing   
+AUTO_RECORDING: process.env.AUTO_RECORDING || "false"
+// make it true for auto recoding 
+};
